<resources>
    <item name="is_scale_size_tag" type="id" />
    <item name="is_scale_font_tag" type="id" />
    <string name="app_name">骑格</string>
    <string name="main_index_text">骑行</string>
    <string name="end_confirm_text">结束骑行</string>
    <string name="main_shopping_text">商场</string>
    <string name="main_mine_text">我的</string>
    <string name="toolbar_search_text">搜索您想要的商品</string>
    <string name="mine_mystroke">我的行程</string>
    <string name="mine_myorder">我的订单</string>
    <string name="mine_myequipment">我的设备</string>
    <string name="mine_set">设置</string>
    <string name="fragment_mine">我的</string>
    <string name="mine_market">商   场</string>
    <string name="app_version">版本：V1.0.0</string>
    <string name="mine_about">关于我们</string>
    <string name="mine_change_psw">修改密码</string>
    <string name="mine_emptyCache">清空缓存</string>
    <string name="mine_update">升级蓝牙</string>
    <string name="mine_old_psw">旧密码</string>
    <string name="mine_new_psw">新密码</string>
    <string name="mine_new_psws">重复新密码</string>
    <string name="market_all">全选</string>
    <string name="market_settlement">结算(2)</string>
    <string name="market_add">+</string>
    <string name="market_sub">-</string>
    <string name="mine_ride_count_distance">总里程</string>

    <array name="mine_order_tab">
        <item>全部@bigShark@-1</item>
        <item>待付款@bigShark@0</item>
        <item>待收货@bigShark@1</item>
    </array>


    <string name="del">删除</string>
    <string name="edit">编辑</string>
    <string name="market_add_adress">新增地址</string>
    <string name="market_save">保存</string>

    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="index_stop">暂停骑行</string>
    <string name="index_finish">结束骑行</string>
    <string name="equ_name">设备名称</string>
    <string name="noteqw">还没有装备，去购买</string>
    <string name="app_time">Copyright@2017</string>
    <string name="app_company">昆山浦伦斯网络科技有限公司 All Rights Reseved</string>
    <string name="index_open">开锁</string>
    <string name="index_close">锁定</string>
    <string name="index_find">寻车</string>
    <string name="index_update">升级</string>
</resources>
