<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_set"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.bigshark.smartlight.pro.mine.view.SetActivity">

    <com.bigshark.smartlight.weight.XCRoundRectImageView
        android:layout_width="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:src="@drawable/hander"
        android:scaleType="fitXY"
        app:shape_mode="round_rect"
        app:round_radius="4dp"
        android:layout_height="80dp"
        android:id="@+id/XCRoundRectImageView"/>

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginTop="6dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/text_three"
        android:text="@string/app_version"/>

    <com.allen.library.SuperTextView
    android:layout_width="match_parent"
    android:id="@+id/stv_about"
    android:layout_marginTop="30dp"
    app:sLeftTextString="@string/mine_about"
    app:sRightIconRes="@drawable/right_comein"
    app:sLeftTextMarginLeft="40dp"
    app:sRightIconMarginRight="40dp"
    app:sBottomLineMargin="35dp"
    android:layout_height="50dp"/>

    <com.allen.library.SuperTextView
        android:layout_width="match_parent"
        android:id="@+id/stv_changePsw"
        app:sLeftTextString="@string/mine_change_psw"
        app:sRightIconRes="@drawable/right_comein"
        app:sLeftTextMarginLeft="40dp"
        app:sRightIconMarginRight="40dp"
        app:sBottomLineMargin="35dp"
        android:layout_height="50dp"/>

    <com.allen.library.SuperTextView
        android:layout_width="match_parent"
        android:id="@+id/stv_emptyCache"
        app:sLeftTextString="@string/mine_emptyCache"
        app:sLeftTextMarginLeft="40dp"
        app:sRightIconMarginRight="40dp"
        app:sLineShow="none"
        android:layout_height="50dp"/>

    <Button
        android:id="@+id/bt_logout"
        android:text="退出登陆"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:layout_marginTop="80dp"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/fragment_index_button_bg"
        android:shadowColor="#EE3C57"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        />

</LinearLayout>
