<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_change_psw"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/root_view_bg"
    android:layout_height="match_parent"
    tools:context="com.bigshark.smartlight.pro.mine.view.ChangePswActivity">

    <EditText
    android:layout_width="821px"
    android:id="@+id/et_oldPsw"
    android:hint="@string/mine_old_psw"
    android:textColorHint="#999999"
    android:textSize="40px"
    android:layout_marginTop="120px"
    android:paddingLeft="30px"
    android:background="@drawable/mine_edit_text_bg"
    android:layout_height="127px"/>

    <EditText
        android:layout_width="821px"
        android:id="@+id/et_newPsw"
        android:hint="@string/mine_new_psw"
        android:textColorHint="#999999"
        android:textSize="40px"
        android:layout_marginTop="30px"
        android:paddingLeft="43px"
        android:background="@drawable/mine_edit_text_bg"
        android:layout_height="127px"/>

    <EditText
        android:layout_width="821px"
        android:id="@+id/et_newPswS"
        android:hint="@string/mine_new_psws"
        android:textColorHint="#999999"
        android:textSize="40px"
        android:layout_marginTop="30px"
        android:paddingLeft="43px"
        android:background="@drawable/mine_edit_text_bg"
        android:layout_height="127px"/>

    <Button
        android:id="@+id/bt_confirm"
        android:text="确定"
        android:textColor="@color/white"
        android:textSize="49px"
        android:layout_marginTop="576px"
        android:layout_width="518px"
        android:layout_height="130px"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/fragment_index_button_bg"
        android:shadowColor="#EE3C57"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        />
</LinearLayout>
