<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/pop_layout"
    android:background="#2B283B">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="130px"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_open"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100px"
                android:layout_height="100px"
                android:layout_marginTop="80px"
                android:src="@drawable/index_open" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20px"
                android:textSize="40px"
                android:text="@string/index_open"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100px"
                android:layout_height="100px"
                android:layout_marginTop="80px"
                android:src="@drawable/index_close" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20px"
                android:textSize="40px"
                android:text="@string/index_close"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_find"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100px"
                android:layout_height="100px"
                android:layout_marginTop="80px"
                android:src="@drawable/index_find" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20px"
                android:textSize="40px"
                android:text="@string/index_find"
                android:textColor="@color/white" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_update"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100px"
                android:layout_height="100px"
                android:layout_marginTop="80px"
                android:src="@drawable/index_update" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20px"
                android:textSize="40px"
                android:text="@string/index_update"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="60px"
        android:src="@drawable/index_popupwindow_close"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="30px"
        android:layout_height="60px" />

</FrameLayout>